Reformatted all code